# spore

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  README.md  _typos.toml  demo.sp  justfile  prek.toml  pyproject.toml
.cursor/hooks/state/: continual-learning.json
.github/workflows/: ci-build-test.yml  ci-pr-checks.yml  ci-pr-title.yml  ci-static-checks.yml  ci-tests.yml  ci.yml
.learnings/: README.md
.learnings/decisions/: public-precommit-via-pypi-mirror.md
crates/spore/: Cargo.toml
crates/spore-cli/: Cargo.toml
crates/spore-cli/src/: main.rs  package.rs
crates/spore-codegen/: Cargo.toml
crates/spore-codegen/src/: backend.rs  effect_handler.rs  interpret.rs  lib.rs  value.rs
crates/spore-codegen/tests/: interpret_tests.rs
crates/spore-lsp/: Cargo.toml
crates/spore-lsp/src/: lib.rs  main.rs  server.rs
crates/spore-lsp/tests/: lsp_tests.rs
crates/spore-parser/: Cargo.toml
crates/spore-parser/src/: ast.rs  formatter.rs  lexer.rs  lib.rs  parser.rs
crates/spore-parser/tests/: lexer_tests.rs  parser_tests.rs
crates/spore-typeck/: Cargo.toml
crates/spore-typeck/src/: capability.rs  check.rs  concurrency.rs  cost.rs  env.rs  error.rs  hir.rs  hole.rs  incremental.rs  lib.rs  lower.rs  module.rs  platform.rs  refinement.rs  sig_hash.rs  types.rs
crates/spore-typeck/tests/: hir_tests.rs  module_tests.rs  typeck_tests.rs
crates/spore/src/: main.rs
crates/spore/tests/: run_cli_exit_tests.rs
crates/sporec/: Cargo.toml
crates/sporec-codegen/: Cargo.toml
crates/sporec-codegen/src/: effect_handler.rs  interpret.rs  lib.rs  value.rs
crates/sporec-codegen/tests/: interpret_tests.rs
crates/sporec-diagnostics/: Cargo.toml
crates/sporec-diagnostics/src/: lib.rs
crates/sporec-driver/: Cargo.toml
crates/sporec-driver/src/: compiler.rs  lib.rs  main.rs  project.rs
crates/sporec-driver/tests/: compiler_tests.rs
crates/sporec-parser/: Cargo.toml
crates/sporec-parser/src/: ast.rs  error.rs  formatter.rs  lexer.rs  lib.rs  parser.rs
crates/sporec-parser/tests/: lexer_tests.rs  parser_tests.rs
crates/sporec-typeck/: Cargo.toml
crates/sporec-typeck/src/: check.rs  cost.rs  env.rs  error.rs  hir.rs  incremental.rs  lib.rs  lower.rs  module.rs  platform.rs  refinement.rs  sig_hash.rs  types.rs
crates/sporec-typeck/tests/: hir_tests.rs  module_tests.rs  typeck_tests.rs
crates/sporec/src/: compiler.rs  diagnostics.rs  lib.rs  main.rs  project.rs
crates/sporec/tests/: compiler_tests.rs  sporec_cli_tests.rs
docs/: DESIGN.md
docs/archive/: hole-system-v0.2.md
docs/research/: README.md  codegen-comparison.md  concurrency-research.md  hot-reload-research.md  impl-stack-research.md  intent-first-signature-proposal.md  module-system-research.md  pkg-management-research.md  syntax-comparison-v0.1.md  syntax-research.md  type-research-dependent.md  type-research-practical.md  type-research-tradeoffs.md
docs/specs/: README.md  compiler-output-v0.1.md  compiler-pipeline-v0.1.md  concurrency-model-v0.1.md  cost-analysis-v0.1.md  cost-decidability-v0.1.md  cost-model-v0.1.md  effect-algebra-v0.1.md  hole-dependency-graph-v0.1.md  hole-report-v0.3.md  hole-report-v0.4.md  hole-system-v0.2.md  incremental-compilation-v0.1.md  module-system-v0.1.md  package-management-v0.1.md  platform-system-v0.1.md  recursion-analysis-v0.1.md  signature-syntax-v0.2.md  syntax-spec-v0.1.md  type-system-v0.1.md
examples/: demo.sp
scripts/: pre-commit-spore-check  pre-commit-spore-format
skills/spore-language/: SKILL.md
stdlib/: char.sp  collections.sp  dict.sp  list.sp  math.sp  prelude.sp  set.sp  string.sp
