[workspace]
resolver = "2"
members = [
    "crates/sporec",
    "crates/spore-cli",
    "crates/spore-parser",
    "crates/spore-typeck",
    "crates/spore-codegen",
    "crates/spore-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zrr1999/spore"

[workspace.dependencies]
# Parsing
# pest = "2"
# logos = "0.14"

# Incremental compilation
# salsa = "0.18"

# Code generation
# cranelift-codegen = "0.114"
# cranelift-frontend = "0.114"
# cranelift-module = "0.114"
# cranelift-native = "0.114"

# Error reporting
# ariadne = "0.4"
# miette = { version = "7", features = ["fancy"] }

# Content-addressed hashing
# blake3 = "1"

# LSP
# tower-lsp = "0.20"

# Serialization
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# toml = "0.8"

# CLI
# clap = { version = "4", features = ["derive"] }

# Testing
# insta = "1"
# proptest = "1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
