[workspace]
resolver = "2"
members = [
  "crates/spore-cli",
  "crates/spore-codegen",
  "crates/spore-lsp",
  "crates/spore-parser",
  "crates/spore-typeck",
  "crates/sporec",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/spore-lang/spore"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Parsing
# pest = "2"
# logos = "0.14"

# Incremental compilation
# salsa = "0.18"

# Code generation
# cranelift-codegen = "0.114"
# cranelift-frontend = "0.114"
# cranelift-module = "0.114"
# cranelift-native = "0.114"

# Error reporting
# miette = { version = "7", features = ["fancy"] }
# Content-addressed hashing
blake3 = "1"
# CLI
bpaf = { version = "0.9", features = ["dull-color"] }
# clap = { version = "4", features = ["derive"] }
# File watching
notify = "7"
notify-debouncer-mini = "0.5"
owo-colors = "4"
# LSP
# tower-lsp = "0.20"
# Serialization
serde_json = "1"

# Testing
# insta = "1"
# proptest = "1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
