[project]
name = "spore-cli"
version = "0.1.0"
description = "CLI and reference compiler for the Spore language."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Spore contributors" }]
keywords = ["cli", "compiler", "language", "spore"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Compilers",
]

[project.urls]
Documentation = "https://github.com/spore-lang/spore#readme"
Repository = "https://github.com/spore-lang/spore"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/spore-cli/Cargo.toml"
strip = true
