[package]
name = "spore-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Spore codebase manager (stateful: file IO, watch mode, package management)"
license.workspace = true

[[bin]]
name = "spore"
path = "src/main.rs"

[dependencies]
sporec = { path = "../sporec" }
