[package]
name = "spore-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Spore codebase manager (stateful: file IO, watch mode, scaffolding)"
license.workspace = true

[[bin]]
name = "spore"
path = "src/main.rs"

[dependencies]
bpaf = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
owo-colors = { workspace = true }
serde_json = { workspace = true }
sporec = { path = "../sporec" }

[dev-dependencies]
tempfile = "3"
