[package]
name = "spore-codegen"
description = "Spore code generation (Typed AST → Cranelift IR → native code)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
spore-parser = { path = "../spore-parser" }
spore-typeck = { path = "../spore-typeck" }
