[package]
name = "spore-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Spore Language Server Protocol implementation"
repository.workspace = true
license.workspace = true

[[bin]]
name = "spore-lsp"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
sporec-driver = { path = "../sporec-driver" }
sporec-parser = { path = "../sporec-parser" }
