[package]
name = "spore-typeck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Spore type checker and capability/cost analysis"
repository.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
sporec-parser = { path = "../sporec-parser" }

[dev-dependencies]
tempfile = "3"
