[package]
name = "sporec-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Spore language compiler driver (host-side, stateless: source -> compiled output)"
repository.workspace = true
license.workspace = true

[[bin]]
name = "sporec"
path = "src/main.rs"

[dependencies]
bpaf = { workspace = true }
serde_json = { workspace = true }
sporec-codegen = { path = "../sporec-codegen" }
sporec-diagnostics = { path = "../sporec-diagnostics" }
sporec-parser = { path = "../sporec-parser" }
sporec-typeck = { path = "../sporec-typeck" }
