[package]
name = "sporec"
description = "Spore language compiler (stateless, pure function: source → compiled output)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
spore-parser = { path = "../spore-parser" }
spore-typeck = { path = "../spore-typeck" }
spore-codegen = { path = "../spore-codegen" }
