[package]
name = "sporec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Spore language compiler (stateless, pure function: source → compiled output)"
repository.workspace = true
license.workspace = true

[[bin]]
name = "sporec"
path = "src/main.rs"

[dependencies]
bpaf = { workspace = true }
serde_json = { workspace = true }
spore-codegen = { path = "../spore-codegen" }
spore-parser = { path = "../spore-parser" }
spore-typeck = { path = "../spore-typeck" }
